--- a/package.json
+++ b/package.json
@@ -8,13 +8,14 @@
     "chalk": "^2.3.2",
     "express": "^4.16.3",
     "ip": "^1.1.5",
-    "jest": "^22.4.3",
     "moment": "^2.21.0",
     "uuid": "^3.2.1"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "jest": "^22.4.3"
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
